--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "users-app",
+  "name": "jsonplaceholder-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -16,10 +16,15 @@
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
     "@angular/forms": "~9.1.1",
+    "@angular/http": "^5.0.0",
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "bootstrap": "^4.5.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "rxjs": "~6.5.4",
+    "rxjs-compat": "^6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
